# terraform-aws-github-oidc

./: .bumpversion.cfg  .cruft.json  .gitignore  .pre-commit-config.yaml  .python-version  CHANGELOG.md  Makefile  README.md  outputs.tf  pyproject.toml
Makefile.d/: argocd.mk  aws.mk  help.mk  help.py  k8s.mk  python.mk  shared.mk  terraform-classicrepo.mk  terraform-macros.mk  terraform-migrate-ecr.mk  terraform-monorepo.mk  terraform-targets.mk  terraform-templated.mk  terraform-terragrunt.mk  terraform.mk  terragrunt-options.txt
cicd/rc/: argocd_register_cluster.rc  build_artifacts.rc  configure_aws_codeartifact.rc  configure_aws_credentials.rc  configure_aws_ecr.rc  setup_github_actions_git.rc
docs/modules/: acm.md  app.md  cloud-applications-database.md  cloud-applications-environment.md  cloud-services-environment.md  common-data.md  constants.md  cs.md  db.md  ecr-collection.md  ecr.md  eks-blueprint.md  eks-greenprint-layer1.md  eks-greenprint-layer2.md  eks-greenprint.md  eks.md  k8s-addons-pre.md  kms.md  kubernetes-addons.md  postgres-setup.md  redis-clustered.md  route53.md  s3.md  vpc.md  waf.md  web-acl.md
examples/default/: main.tf
modules/repo/: outputs.tf  variables.tf
modules/role/: README.md  attachment.tf  data.tf  locals.tf  outputs.tf  policy.tf  role.tf  variables.tf
modules/role_and_repos/: idp._tf  outputs.tf  repos.tf  variables.tf
modules/role_policies/: attachment.tf  data.tf  variables.tf
modules/roles_and_repos/: outputs.tf  repos.tf  variables.tf
scripts/: add_modules_to_bumpversion_cfg.py  jira-component-and-version.py  normalize_changelog.py
src/terraform_aws_github_oidc/: __init__.py
tests/: conftest.py  test_nothing.py
